--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
    <repository>
      <id>github</id>
      <name>GitHub poojadpatkar96 Apache Maven Packages</name>
-     <url>https://github.com/poojadpatkar96/sunshine-action.git</url>
+     <url>https://github.com/poojadpatkar96/special-waddle</url>
    </repository>
   </distributionManagement>
 
